# Alpine-AI

alpine/: .gitignore  pom.xml
portal/: .eslintrc.json  .gitlab-ci.yml  .prettierrc  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts  wrangler.toml
portal/public/widget/: index.css  index.js
portal/src/: App.tsx  config.ts  index.css  main.tsx
portal/src/components/: global.styles.ts
portal/src/constants/: colors.ts
portal/src/lib/: clsxm.tsx
portal/src/pages/: pagesData.tsx  router.tsx
srv.alpine/: .env  .env.example  .eslintrc  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.prod  README.md  jest.config.js  jest.config.ts  keypair.ts  nodemon.json  package.json  railway.json  tsconfig.json
srv.alpine/init/: init.ts
srv.alpine/private_node_modules/: mongodb-helper-1.0.0.tgz
srv.alpine/src/: app.ts  config.ts  routes.ts  server.ts
srv.alpine/testing/: jest.global.ts  teardown.ts
srv.chatbot/: .gitignore  Dockerfile  Dockerfile.prod  README.md  init.py  railway.json  run.py  setup.cfg  setup.py
srv.chatbot/app/: __init__.py
srv.chatbot/app/config/: settings.py
srv.chatbot/app/controllers/: __init__.py  chatbot.py
srv.chatbot/app/utils/: decorators.py  exceptions.py  text_cleaner.py
srv.chatbot/app/utils/chatbot/: Chatbot.py  model.py
srv.chatbot/app/utils/intents/: basic_intents.json  conversation.json
srv.chatbot/tests/: conftest.py
srv.chatbot/tests/functional/: test_chatbot_route.py
srv.chatbot/tests/unit/: test_chatbot.py  test_string_utils.py
(+278 files in other folders)
