[metadata]
name = app
version = 1.0.0
maintainer = Ali Ozcan
maintainer_email = a.ozcan98@hotmail.com
description = Pickr chatbot server
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
    python-dotenv
    flask_pymongo
    emoji
    tensorflow
    keras
    numpy
    nltk
    scikit-learn
    textblob
    pytest

[options.extras_require]
test = pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = app
